--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^8.8.4",
     "socket.io": "^4.8.1"
   }
